footer; li supp, contraste, info + diverses corrections

--- a/style.css
+++ b/style.css
@@ -476,8 +476,15 @@ button {
     box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
+.black_l {
+    color: #3B3B3B;
+    font-size: 18px;
+}
+
 .icon-md {
+    padding-top: 12px;
     font-size: 30px!important;
+    color: #3B3B3B!important;
 }
 
 .icon-lg {
@@ -652,7 +659,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #3B3B3B!important;
 }
 
 .container {
@@ -684,6 +691,7 @@ p {
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
+    font-size: 18px;
 }
 
 .h1 {
